feat: TransitWithAbstractAccessModule